--- a/GameStore/store/templates/store/Index.html
+++ b/GameStore/store/templates/store/Index.html
@@ -52,7 +52,7 @@
         <div class="banner-text">
           <h1 id="bannerTitle">{{ banner_game.name }}</h1>
           <p id="bannerDescription">.</p>
-          <button class="banner-btn">Подробнее</button>
+          <a id="bannerDetailBtn" class="banner-btn" href="#">Подробнее</a>
         </div>
         <div class="banner-progress"></div>
       {% else %}
