css moderator game panel

--- a/GameStore/store/templates/store/Moderator/delete_game.html
+++ b/GameStore/store/templates/store/Moderator/delete_game.html
@@ -1,8 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/moder-game-panel.css' %}">
 </head>
 <body>
 <h1>Удаление игры</h1>
