--- a/GameStore/store/templates/store/game-detail.html
+++ b/GameStore/store/templates/store/game-detail.html
@@ -8,6 +8,7 @@
   <title>{{ title }}</title>
 
   <link rel="stylesheet" href="{% static 'css/game-detail.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/header.css' %}" />
   <link rel="icon" href="{% static 'img/logo/logo.ico' %}" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
