--- a/GameStore/static/css/games-list.css
+++ b/GameStore/static/css/games-list.css
@@ -58,7 +58,52 @@
     pointer-events: none;
   }
   
+  .search-results {
+    position: absolute;
+    top: calc(100% + 4px); /* чуть ниже input */
+    left: 0;
+    width: 100%;
+    z-index: 10;
   
+    background: #1b1b1f;
+    border: 1px solid #2a2a2e;
+    border-radius: 14px;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.6);
+    overflow: hidden;
+    padding: 6px 0;
+    list-style: none;
+    display: none; /* будет показано через JS */
+  
+  }
+  
+  .search-results li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 18px;
+    color: #ccc;
+    font-size: 15px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+  }
+  
+  .search-results li:hover {
+    background-color: #2f2f35;
+  }
+  
+  .search-results img {
+    width: 42px;
+    height: 42px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+  
+  .search-results span {
+    color: #ddd;
+    font-size: 15px;
+    line-height: 1.2;
+  }
+   
   
   .page-nav {
     display: flex;
