--- a/GameStore/store/templates/store/Index.html
+++ b/GameStore/store/templates/store/Index.html
@@ -1,70 +1,9 @@
-<<<<<<< HEAD
-=======
 {% load static %}
 
->>>>>>> 6b89dd9e212921f5c7d4c7ce8e0091574fc9a752
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-<<<<<<< HEAD
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <title>GameStore</title>
-</head>
-<body>
-  <header class="header">
-    <div class="header-left">
-      <div class="logo-dropdown">
-        <img src="../icons/logo.png" alt="Logo" class="logo" />
-        <span class="arrow">▾</span>
-        <div class="dropdown-menu">
-          <a href="#">Главная</a>
-          <a href="#">Каталог</a>
-          <a href="#">О нас</a>
-        </div>
-      </div>
-      <span class="store-name">STORE</span>
-    </div>
-    <nav class="header-nav">
-      <a href="#">Поддержка</a>
-      <div class="dropdown">
-        <a href="#">Публикация ▾</a>
-        <div class="dropdown-content">
-          <a href="#">Unreal Engine</a>
-          <a href="#">Twinmotion</a>
-          <a href="#">MetaHuman</a>
-        </div>
-      </div>
-    </nav>
-    <div class="header-right">
-      <img src="../icons/language.png" alt="language" width="22" height="22">
-      <a href="login.html" class="login-btn" >Войти</a>
-      <button class="download-btn">Загрузить</button>
-    </div>
-  </header>
-
-  <div class="search-section">
-    <div class="search-bar">
-      <input type="text" placeholder="Искать в магазине" />
-      <span class="search-icon">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="11" cy="11" r="8" stroke="#aaa" stroke-width="2"/>
-          <line x1="16.5" y1="16.5" x2="22" y2="22" stroke="#aaa" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-      </span>
-    </div>
-    <nav class="page-nav">
-      <a href="#">Главное</a>
-      <a href="#">Все игры</a>
-      <a href="#">Новости</a>
-    </nav>
-  </div>
-  
-  
-  
-=======
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ title }}</title>
 
@@ -150,7 +89,7 @@
 
   <!-- Скрипты -->
   <script src="{% static 'js/bannerslist.js' %}"></script>
->>>>>>> 6b89dd9e212921f5c7d4c7ce8e0091574fc9a752
+  <script src="{% static 'js/search.js' %}"></script>
 
 </body>
 </html>
