--- a/GameStore/store/templates/store/base-header.html
+++ b/GameStore/store/templates/store/base-header.html
@@ -9,7 +9,7 @@
       <nav class="dropdown-menu">
         <a href="{% url 'index' %}">Главная</a>
         <a href="{% url 'gamelist' %}">Каталог</a>
-        <a href="myprofil.html">Профиль</a>
+        <a href="{% url 'my_profile' %}"">Профиль</a>
       </nav>
     </div>
     <span class="store-name">STORE</span>
