--- a/GameStore/store/templates/store/edit_profile.html
+++ b/GameStore/store/templates/store/edit_profile.html
@@ -88,7 +88,7 @@
         </div>
 
         <button type="submit" class="banner-btn">Сохранить</button>
-        <a href="{% url 'profile' %}" class="banner-btn cancel-btn">Отмена</a>
+        <a href="{% url 'my_profile' %}" class="banner-btn cancel-btn">Отмена</a>
       </form>
     </section>
   </main>
