--- a/GameStore/store/templates/store/game-detail.html
+++ b/GameStore/store/templates/store/game-detail.html
@@ -67,10 +67,18 @@
 
         <div class="sidebar-section">
           <h3>Купить игру</h3>
-          <form action="{% url 'create_checkout_session' game.id %}" method="POST">
-            {% csrf_token %}
-            <button type="submit" class="buy-button">Купить за 1000 ₸</button>
-          </form>
+          {% if user.is_authenticated %}
+            {% if not user_has_purchased %}
+              <form action="{% url 'create_checkout_session' game.id %}" method="POST">
+              {% csrf_token %}
+              <button type="submit" class="buy-button">Купить за {{ game.price_kzt }} ₸</button>
+              </form>
+            {% else %}
+              <p class="owned-label">Вы уже приобрели эту игру ✅</p>
+            {% endif %}
+            {% else %}
+              <p><a href="{% url 'login' %}?next={{ request.path }}">Войдите</a>, чтобы купить эту игру.</p>
+            {% endif %}
         </div>
         
       </aside>
