--- a/GameStore/static/css/header.css
+++ b/GameStore/static/css/header.css
@@ -153,4 +153,84 @@
     font-size: 15px;
     cursor: pointer;
   }
+
+@media (max-width: 1200px) {
+  .header-nav {
+    margin-right: 400px;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+  }
+
+  .header-nav {
+    margin-right: 0;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-right {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+}
+
+
+@media (max-width: 576px) {
+  .header-left,
+  .header-right {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .logo {
+    height: 40px;
+  }
+
+  .store-name {
+    font-size: 16px;
+  }
+
+  .header-nav {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .main-container {
+    margin: 20px;
+  }
+
+  .main-banner {
+    min-height: 250px;
+  }
+
+  .banner-btn {
+    width: 100%;
+    text-align: center;
+  }
+
+  .discover-more h2 {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .discover-more h2 span {
+    font-size: 18px;
+    margin-right: 0;
+  }
+
+  .search-bar input {
+    width: 100%;
+  }
+}
   
