--- a/GameStore/store/templates/store/edit_profile.html
+++ b/GameStore/store/templates/store/edit_profile.html
@@ -28,44 +28,61 @@
       <form method="post" enctype="multipart/form-data" class="profile-form">
         {% csrf_token %}
 
-        <div class="form-group">
-            <label for="{{ form.avatar.id_for_label }}">Аватар</label>
-          
-            {# Показываем миниатюру текущего аватара, если есть #}
-            {% if user.avatar %}
-              <img src="{{ user.avatar.url }}" alt="avatar" class="avatar-preview">
-            {% endif %}
-          
-            {# Поле выбора файла #}
-            {{ form.avatar.as_widget }}
-          
-            {# Чекбокс удаления, если файл уже есть #}
-            {% if form.avatar.value %}
-              <div class="form-clear">
-                {{ form.avatar.clear_checkbox }}
-                <label for="{{ form.avatar.clear_checkbox.id_for_label }}">Удалить текущий аватар</label>
-              </div>
-            {% endif %}
+        {% if form.non_field_errors %}
+          <div class="form-error-global">
+            {% for error in form.non_field_errors %}
+              <p style="color: red;">{{ error }}</p>
+            {% endfor %}
           </div>
+        {% endif %}
+
+        <div class="form-group">
+          <label for="{{ form.avatar.id_for_label }}">Аватар</label>
+          {% if user.avatar %}
+            <img src="{{ user.avatar.url }}" alt="avatar" class="avatar-preview">
+          {% endif %}
+          {{ form.avatar.as_widget }}
+          {% if form.avatar.value %}
+            <div class="form-clear">
+              {{ form.avatar.clear_checkbox }}
+              <label for="{{ form.avatar.clear_checkbox.id_for_label }}">Удалить текущий аватар</label>
+            </div>
+          {% endif %}
+          {% for error in form.avatar.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
+        </div>
 
         <div class="form-group">
           <label for="{{ form.username.id_for_label }}">Имя пользователя</label>
           {{ form.username }}
+          {% for error in form.username.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <div class="form-group">
           <label for="{{ form.email.id_for_label }}">Email</label>
           {{ form.email }}
+          {% for error in form.email.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <div class="form-group">
           <label for="{{ form.birthdate.id_for_label }}">Дата рождения</label>
           {{ form.birthdate }}
+          {% for error in form.birthdate.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <div class="form-group">
           <label for="{{ form.bio.id_for_label }}">Описание</label>
           {{ form.bio }}
+          {% for error in form.bio.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <hr style="margin: 30px 0; border: none; border-top: 1px solid #444;" />
@@ -75,16 +92,25 @@
         <div class="form-group">
           <label for="{{ form.current_password.id_for_label }}">Текущий пароль</label>
           {{ form.current_password }}
+          {% for error in form.current_password.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <div class="form-group">
           <label for="{{ form.new_password.id_for_label }}">Новый пароль</label>
           {{ form.new_password }}
+          {% for error in form.new_password.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <div class="form-group">
           <label for="{{ form.confirm_password.id_for_label }}">Подтвердите новый пароль</label>
           {{ form.confirm_password }}
+          {% for error in form.confirm_password.errors %}
+            <div style="color: red;">{{ error }}</div>
+          {% endfor %}
         </div>
 
         <button type="submit" class="banner-btn">Сохранить</button>
